<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/velocity"
        android:text="@string/initial_velocity"
        android:textSize="150sp"
        android:textColor="@color/colorDigits"
        android:textStyle="bold|italic"
        android:fontFamily="@font/calculator"
        android:textAlignment="center"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter_per_second"
        android:textSize="50sp"
        android:textColor="@color/colorDigits"
        android:textStyle="bold|italic"
        android:fontFamily="@font/calculator"
        app:layout_constraintStart_toEndOf="@id/velocity"
        app:layout_constraintBottom_toBottomOf="@id/velocity"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/threshold_info"
        app:layout_constraintTop_toBottomOf="@id/velocity"
        app:layout_constraintBottom_toTopOf="@id/seekbar_threshold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_threshold"
            android:text="@string/threshold"
            android:textSize="@dimen/text_table"
            android:textColor="@color/colorDigits"
            android:fontFamily="@font/calculator"
            app:layout_constraintBottom_toTopOf="@id/seekbar_threshold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/threshold_value"
            android:text="@string/initial_threshold"
            android:textSize="@dimen/text_table"
            android:textColor="@color/colorDigits"
            android:fontFamily="@font/calculator"
            app:layout_constraintStart_toEndOf="@id/text_threshold"
            app:layout_constraintTop_toTopOf="@id/text_threshold"
            app:layout_constraintBottom_toBottomOf="@id/text_threshold"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <SeekBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_threshold"
        android:max="100"
        android:progress="50"
        app:layout_constraintWidth_percent="0.27"
        app:layout_constraintTop_toBottomOf="@id/threshold_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acceleration"
                android:textSize="@dimen/text_table"
                android:textColor="@color/colorDigits"
                android:fontFamily="@font/calculator"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_axis"
                android:textColor="@color/colorDigits"
                android:textSize="@dimen/text_table"
                android:fontFamily="@font/calculator"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accel_x"
                android:text="@string/initial_velocity"
                android:textColor="@color/colorDigits"
                android:textSize="@dimen/text_table"
                android:fontFamily="@font/calculator"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_axis"
                android:textColor="@color/colorDigits"
                android:textSize="@dimen/text_table"
                android:fontFamily="@font/calculator"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accel_y"
                android:text="@string/initial_velocity"
                android:textColor="@color/colorDigits"
                android:textSize="@dimen/text_table"
                android:fontFamily="@font/calculator"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_axis"
                android:textColor="@color/colorDigits"
                android:textSize="@dimen/text_table"
                android:fontFamily="@font/calculator"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/accel_z"
                android:text="@string/initial_velocity"
                android:textColor="@color/colorDigits"
                android:textSize="@dimen/text_table"
                android:fontFamily="@font/calculator"
                android:layout_column="2" />

        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/init"
        android:text="@string/init"
        android:textSize="15sp"
        android:textColor="@color/colorDigits"
        android:background="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>